--- a/CSS/style.css
+++ b/CSS/style.css
@@ -97,6 +97,7 @@ button {
 h4{
     display: flex;
     justify-content: center ;
+    padding: 20px 20px;
 }
 
 h5{
@@ -111,8 +112,8 @@ h5{
 }
 
 .grid img {
-    width: 100%;
-    height: auto;
+    width: 105%;
+    height: 105%;
     display: block;
   }
 
